# sentinels_slack_bot

./: LICENSE  Makefile  main.py  pyproject.toml
config/: mcp.json
src/application/commands/: __init__.py  sprint_summary.py  summary.py  test.py
src/application/commands/github/: __init__.py  test.py
src/application/commands/jira/: __init__.py  summary.py
src/application/services/: get_jira_summary.py
src/application/services/jira/: get_summary.py
src/config/: __init__.py  agent.py  env.py  jira_board.py  mcp.py  template.py
src/domain/entity/agent/: planner.py  tools.py
src/domain/entity/agent/common/: plan.py  task.py
src/domain/entity/custom_tool/: __init__.py  adapter.py  base.py
src/domain/entity/custom_tool/jira/: omit_issue_data_for_summary.py
src/domain/use_case/jira/: __init__.py  get_summary.py
src/infrastructure/: gemini_client.py  jira_client.py  slack_notifier.py
src/infrastructure/issue_tracking/jira/: __init__.py
src/infrastructure/llm/: __init__.py  adapter.py
src/infrastructure/llm/agent/: base.py  claude.py  gemini.py
src/infrastructure/llm/model/: claude.py  gemini.py
src/infrastructure/mcp/: __init__.py  adapter.py  decorator.py  mcp_mixin.py
src/infrastructure/mcp/server/: atlassian.py  base.py
src/infrastructure/messaging/: __init__.py
src/infrastructure/messaging/slack/: __init__.py  notifier.py
template/: tools.md
template/chart/: architecture_diagram.md
template/jira/: plan.md
