[project]
name = "sprint-summary-slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "jira>=3.10.5",
    "python-dotenv>=1.1.1",
    "slack-bolt>=1.23.0",
    "slack-sdk>=3.36.0",
]
