[project]
name = "sentinels-slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.66.0",
    "certifi>=2025.8.3",
    "fastmcp>=2.12.2",
    "google-genai>=1.33.0",
    "jira>=3.10.5",
    "mcp>=1.13.1",
    "python-dotenv>=1.1.1",
    "slack-bolt>=1.24.0",
]
